<resources>
    <string name="app_name">AD340_Knigge_App</string>
    <string name="toast">Toast</string>
    <string name="counter">Counter</string>
    <string name="_0">0</string>
    <string name="disney">Disney+</string>
    <string name="live_tv">Live TV</string>
    <string name="hulu">Hulu</string>
    <string name="netflix">Netflix</string>
    <string name="login_button">Login</string>
    <string name="user_name">Username</string>
    <string name="movies">Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_traffic_cameras">TrafficCameras</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_connection">No Connection, please get your internet connection and try again</string>
    <string name="traffic_cam">Traffic Cam</string>
    <string name="map_cam">Map Cam</string>
    <string name="title_activity_map_cameras">MapCameras</string>
    <string name="title_activity_camera_map">CameraMap</string>
    <string name="title_activity_t_e_m_p">Map</string>
    <string name="title_activity_map_camera">Map</string>
</resources>