<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="160dp"
        android:text="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="160dp"
        android:text="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login_button"
        android:onClick="sendToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/netflix_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="runNetflix"
            android:text="@string/netflix" />

        <Button
            android:id="@+id/hulu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="runHulu"
            android:text="@string/hulu" />

        <Button
            android:id="@+id/movies_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            />

        <Button
            android:id="@+id/camera_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_cam"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/disney_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="runDisney"
            android:text="@string/disney" />

        <Button
            android:id="@+id/live_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="runLiveTV"
            android:text="@string/live_tv" />

        <Button
            android:id="@+id/traffic_camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traffic_cam"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>